Adds settings menu. Has some working functionallity

--- a/smart-roomba-android/app/src/main/res/values/strings.xml
+++ b/smart-roomba-android/app/src/main/res/values/strings.xml
@@ -8,4 +8,6 @@
     <string name="rotate_left">Rotate left</string>
     <string name="drive_backwards">Drive backwards</string>
     <string name="drive_forwards">Drive forwards</string>
+    <string name="full_mode">Full Mode</string>
+    <string name="title_settings">Settings</string>
 </resources>
